--- a/front/Restorumba/app/src/main/res/layout/activity_reg.xml
+++ b/front/Restorumba/app/src/main/res/layout/activity_reg.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/main"
     android:background="@drawable/light_theme_background">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -32,10 +33,11 @@
             android:layout_height="7dp"
             android:background="@drawable/underline"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/textView4"
-            app:layout_constraintStart_toStartOf="@+id/textView4" />
+            app:layout_constraintEnd_toEndOf="@+id/link_to_reg"
+            app:layout_constraintStart_toStartOf="@+id/link_to_reg"/>
+
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/link_to_login"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:fontFamily="@font/nunito"
@@ -49,7 +51,7 @@
             android:layout_marginBottom="11dp"/>
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/link_to_reg"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:layout_marginStart="14dp"
