--- a/front/Restorumba/app/src/main/res/layout/activity_order.xml
+++ b/front/Restorumba/app/src/main/res/layout/activity_order.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/main"
     android:background="@drawable/light_theme_background">
 
     <ImageView
@@ -17,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
-        android:id="@+id/imageButton2"
+        android:id="@+id/link_to_profile"
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:layout_marginTop="25dp"
@@ -49,7 +50,7 @@
         app:circularflow_defaultRadius="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton2">
+        app:layout_constraintTop_toBottomOf="@+id/link_to_profile">
 
         <TextView
             android:id="@+id/textView5"
@@ -205,7 +206,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ImageButton
-        android:id="@+id/imageButton3"
+        android:id="@+id/link_to_basket"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="42dp"
@@ -224,9 +225,9 @@
         android:gravity="center_horizontal"
         android:textSize="16sp"
         app:cornerRadius="30dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageButton3"
+        app:layout_constraintBottom_toBottomOf="@+id/link_to_basket"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageButton3">
+        app:layout_constraintTop_toTopOf="@+id/link_to_basket">
     </Button>
 </androidx.constraintlayout.widget.ConstraintLayout>
