--- a/front/Restorumba/app/src/main/res/values/styles.xml
+++ b/front/Restorumba/app/src/main/res/values/styles.xml
@@ -19,4 +19,8 @@
         <item name="android:textSize">14sp</item>
         <item name="fontFamily">@font/nunito_bold</item>
     </style>
+    
+    <style name="SplashTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowBackground">@layout/splash</item>
+    </style>
 </resources>
