some front sheeet

--- a/front/Restorumba/app/src/main/res/layout/activity_login.xml
+++ b/front/Restorumba/app/src/main/res/layout/activity_login.xml
@@ -40,7 +40,7 @@
             android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:fontFamily="@font/nunito"
-            android:text="Вход"
+            android:text="@string/login"
             android:textColor="#170C10"
             android:textSize="20sp"
             android:textStyle="bold"
@@ -58,7 +58,7 @@
             android:fontFamily="@font/nunito"
             android:clickable="true"
             android:focusable="true"
-            android:text="Регистрация"
+            android:text="@string/reg"
             android:textColor="#170C10"
             android:textSize="20sp"
             android:textStyle="bold"
@@ -84,7 +84,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/nunito"
-            android:text="8-800-555-35-35"
+            android:hint="@string/user_phone"
             android:textColor="#170C10"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -95,7 +95,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/nunito"
-            android:text="Номер телефона"
+            android:text="@string/phone"
             android:textColor="#170C10"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -125,7 +125,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/nunito"
             android:textColor="#170C10"
-            android:text="***************"
+            android:hint="@string/user_password"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -135,7 +135,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/nunito"
-            android:text="Пароль"
+            android:text="@string/password"
             android:textColor="#170C10"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -159,12 +159,13 @@
         android:height="40dp"
         android:backgroundTint="#FF222C"
         android:fontFamily="@font/nunito_bold"
-        android:text="Вход"
+        android:text="@string/to_login"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         app:cornerRadius="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:paddingTop="3dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
