--- a/front/Restorumba/app/src/main/res/layout/activity_paying_options.xml
+++ b/front/Restorumba/app/src/main/res/layout/activity_paying_options.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="33dp"
-        android:text="@string/paying_options"
+        android:text="@string/payment_options"
         android:theme="@style/HeadingText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -88,7 +88,7 @@
         android:fontFamily="@font/nunito_bold"
         android:gravity="center_horizontal"
         android:paddingTop="2dp"
-        android:text="Назад"
+        android:text="@string/back"
         android:textSize="16sp"
         app:cornerRadius="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
