--- a/front/Restorumba/app/src/main/res/layout/activity_reg.xml
+++ b/front/Restorumba/app/src/main/res/layout/activity_reg.xml
@@ -41,7 +41,7 @@
             android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:fontFamily="@font/nunito"
-            android:text="Вход"
+            android:text="@string/login"
             android:textColor="#170C10"
             android:textSize="20sp"
             android:textStyle="bold"
@@ -57,7 +57,7 @@
             android:layout_marginStart="14dp"
             android:layout_marginTop="16dp"
             android:fontFamily="@font/nunito"
-            android:text="Регистрация"
+            android:text="@string/reg"
             android:textColor="#170C10"
             android:textSize="20sp"
             android:textStyle="bold"
@@ -83,7 +83,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/nunito"
-            android:text="Иван"
+            android:hint="@string/user_name"
             android:textColor="#170C10"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -93,7 +93,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/nunito"
-            android:text="Имя"
+            android:text="@string/name"
             android:textColor="#170C10"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -123,7 +123,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/nunito"
-            android:text="Иванов"
+            android:hint="@string/user_surname"
             android:textColor="#170C10"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -134,7 +134,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/nunito"
-            android:text="Фамилия"
+            android:text="@string/surname"
             android:textColor="#170C10"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -165,7 +165,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/nunito"
             android:textColor="#170C10"
-            android:text="8-800-555-35-35"
+            android:hint="@string/user_phone"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -175,7 +175,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/nunito"
-            android:text="Номер телефона"
+            android:text="@string/phone"
             android:textColor="#170C10"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -205,7 +205,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/nunito"
             android:textColor="#170C10"
-            android:text="***************"
+            android:hint="@string/user_password"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -215,7 +215,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/nunito"
-            android:text="Пароль"
+            android:text="@string/password"
             android:textColor="#170C10"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -234,17 +234,18 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="55dp"
-        android:width="200dp"
         android:height="40dp"
+        android:layout_marginBottom="55dp"
         android:backgroundTint="#FF222C"
         android:fontFamily="@font/nunito_bold"
-        android:text="Регистрация"
+        android:text="@string/to_reg"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         app:cornerRadius="30dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/сonstraintLayout4"
+        android:layout_marginTop="53dp"
+        android:paddingTop="4dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
