--- a/front/Restorumba/app/src/main/res/layout/activity_order_history.xml
+++ b/front/Restorumba/app/src/main/res/layout/activity_order_history.xml
@@ -47,7 +47,7 @@
         android:fontFamily="@font/nunito_bold"
         android:gravity="center_horizontal"
         android:paddingTop="2dp"
-        android:text="Назад"
+        android:text="@string/back"
         android:textSize="16sp"
         app:cornerRadius="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
