--- a/front/Restorumba/app/src/main/res/layout/activity_profile.xml
+++ b/front/Restorumba/app/src/main/res/layout/activity_profile.xml
@@ -14,22 +14,21 @@
         android:layout_marginStart="22dp"
         android:layout_marginTop="32dp"
         android:background="@android:color/transparent"
-        android:contentDescription="To main page"
         android:src="@drawable/ic_home"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="108dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="75dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:fontFamily="@font/nunito_semibold"
-        android:text="Профиль"
+        android:text="@string/profile"
         android:textColor="#170C10"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="@+id/link_to_order"
-        app:layout_constraintStart_toEndOf="@+id/link_to_order"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/link_to_order" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -50,7 +49,6 @@
             android:layout_height="100dp"
             android:layout_marginStart="16dp"
             android:background="@mipmap/ic_profile_picture_2_foreground"
-            android:contentDescription="Profile picture"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
@@ -61,7 +59,7 @@
             android:layout_height="30dp"
             android:layout_marginStart="14dp"
             android:fontFamily="@font/nunito_semibold"
-            android:text="Иванов Иван"
+            android:text="@string/user_name"
             android:textColor="#170C10"
             android:textSize="24sp"
             app:layout_constraintStart_toEndOf="@+id/imageView"
@@ -73,7 +71,7 @@
             android:layout_marginStart="14dp"
             android:layout_marginTop="16dp"
             android:fontFamily="@font/nunito_semibold"
-            android:text="8800553535"
+            android:text="@string/user_phone"
             android:textColor="#170C10"
             android:textSize="15sp"
             app:layout_constraintStart_toEndOf="@+id/imageView"
@@ -108,7 +106,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/nunito_semibold"
-            android:text="История заказов"
+            android:text="@string/order_history"
             android:textSize="16sp"
             android:textColor="#170C10"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -143,7 +141,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/nunito_semibold"
-            android:text="Настройки"
+            android:text="@string/settings"
             android:textSize="16sp"
             android:textColor="#170C10"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -181,7 +179,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/nunito_semibold"
-            android:text="Способ оплаты"
+            android:text="@string/payment_options"
             android:textSize="16sp"
             android:textColor="#170C10"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -207,7 +205,7 @@
         android:fontFamily="@font/nunito_bold"
         android:gravity="center_horizontal"
         android:paddingTop="2dp"
-        android:text="Выйти"
+        android:text="@string/exit"
         android:textSize="16sp"
         app:cornerRadius="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
